--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,10 @@ article .article-content {
     margin-top: 30px;
 }
 
+.m-bottom {
+    margin-bottom: 1rem;
+}
+
 /* -------------------------------------------------------------------- Hover / Focus */
 
 a:hover,
@@ -338,6 +342,8 @@ img {
 #awareness-content-2 {
     grid-column: 1 / -1;
     grid-row: 5 / 6;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 #utils-controls {
