--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,6 +434,7 @@ input[type=email] {
 button[type=submit] {
     background-color: var(--light-pink);
     color: var(--p-color-dk);
+    font-size: 1.2rem;
     display: block;
     margin: 0 auto;
     padding: 12px 20px;
