--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,10 +251,9 @@ nav {
 }
   
 .hero-image:before {
-    content: "";
+    content: '';
     position: absolute;
-    left: 10%; right: 10%;
-    top: 20%; bottom: 20%;
+    inset: 10% 10% 20% 10%;
     background: rgba(5, 168, 233, 0.7);
 }
 
@@ -309,7 +308,8 @@ img {
 
 /* -------------------------------------------------------------------- Awareness */
 
-#awareness {
+#awareness,
+#support {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: minmax(3rem, auto) auto auto repeat(2, 1fr);
@@ -318,7 +318,8 @@ img {
 }
 
 #awareness-title,
-#resources-title {
+#resources-title,
+#support-title {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
     justify-self: center;
@@ -386,10 +387,11 @@ model-viewer {
     background-color: transparent;
 }
 
-/* -------------------------------------------------------------------- Support */
+/* -------------------------------------------------------------------- Support section */
+
 .support {
     display: flex;
-    margin: 25px 50px;
+    margin-bottom: 48px;
 }
 
 /* -------------------------------------------------------------------- Resource styling */
