--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,7 +399,7 @@ model-viewer {
 #support-section>h3 {
     text-align: center;
     color: var(--black);
-    font-size:
+    font-size:20px;
 }
 .support {
     display: flex;
